@@ -677,7 +677,7 @@ class SchemaTest(TestBase):
     @testing.crashes('firebird', 'No schema support')
     @testing.fails_on('sqlite')
     # fixme: revisit these below.
-    @testing.fails_on('access', 'mssql', 'sybase')
+    @testing.fails_on('access', 'sybase')
     def test_explicit_default_schema(self):
         engine = testing.db
 
